[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/space/playerShip1_blue.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/misc/health_bar_green.png" type="Texture" id=3]
[ext_resource path="res://assets/misc/health_bar_red.png" type="Texture" id=4]
[ext_resource path="res://scripts1/Player_Area2D.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 37.0
height = 36.0

[sub_resource type="CircleShape2D" id=2]
radius = 110.0

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_mask = 10
script = ExtResource( 2 )

[node name="Controlled" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.0
margin_top = -54.0
margin_right = 169.0
margin_bottom = 178.0
rect_scale = Vector2( 0.5, 0.5 )
color = Color( 0.5, 1, 0.25, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayUsername" type="Label" parent="."]
margin_left = -67.0
margin_top = -68.0
margin_right = 68.0
margin_bottom = -54.0
text = "Anonymous"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="Area2D" parent="."]
collision_mask = 14
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, 7 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="HP_bar" type="Label" parent="."]
margin_left = -18.0
margin_top = -90.0
margin_right = 32.0
margin_bottom = -74.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FireTimer" type="Timer" parent="."]

[node name="HP_bar2" type="TextureProgress" parent="."]
margin_left = -58.0
margin_top = 63.0
margin_right = 57.0
margin_bottom = 71.0
max_value = 1000.0
value = 1000.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_Position" type="Position2D" parent="."]

[node name="SpellTimer" type="Timer" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]

[node name="SpawnTimer2" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="SecondTimer" type="Timer" parent="."]

[connection signal="area_entered" from="Player" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Player" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="timeout" from="SpellTimer" to="." method="_on_SpellTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="SpawnTimer2" to="." method="_on_SpawnTimer2_timeout"]
[connection signal="timeout" from="SecondTimer" to="." method="_on_SecondTimer_timeout"]
